--- a/scss/blocks/_form.scss
+++ b/scss/blocks/_form.scss
@@ -14,7 +14,7 @@
 
 	label {
 		position: relative;
-		padding: 0.5em 0.75em;
+		padding: 0.5em 0.75em 0.25em;
 		background-color: hsla(180, 29%, 50%, 0.15);
 		transition: all 200ms;
 		font-size: var(--step--1);
