--- a/scss/blocks/_job-card.scss
+++ b/scss/blocks/_job-card.scss
@@ -38,7 +38,7 @@
 	.highlight,
 	.promoted {
 		display: inline-block;
-		padding: 0.5em 0.75em;
+		padding: 0.6em 0.75em 0.3em;
 		border-radius: 1em;
 		font-size: var(--step--1);
 		font-weight: 700;
